--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -20,6 +20,8 @@ page{
   white-space: nowrap;
 }
 .imgIcon{
+  position: relative;
+  z-index: 0;
   height: 1.2em; 
   width: 1.2em;
   display: inline-block;
