--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,7 +2,9 @@
 <bgCanvas></bgCanvas>
 <view class="container">
 
-	<view class="cu-modal {{modalName=='Modal'?'show':''}}">
+	<view class="cu-modal {{modalName=='Modal'?'show':''}}"
+		style="z-index: 2110;"
+	>
 		<view class="cu-dialog watering">
 		  <view class="cu-bar bg-white justify-end">
 			<view class="content">温馨小提示</view>
@@ -56,10 +58,11 @@
 		<text class="colorgradient">来写一篇日记吧~</text>
 
 		<view class="cu-form-group"
-			style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;min-height: 0;opacity: 0;"
+			style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;min-height: 0;opacity: 0;padding: 0 !important;"
 		>
-			<view class="title">普通选择</view>
-			<picker bindchange="PickerChange" value="{{index}}" range="{{list}}">
+			<picker bindchange="PickerChange" value="{{index}}" range="{{list}}"
+			style="width: 100%;height: 100%;padding: 0;overflow: hidden;"
+			>
 				<view class="picker">
 					{{list[index]}}
 				</view>
