--- a/miniprogram/pages/newDiary/newDiary.wxss
+++ b/miniprogram/pages/newDiary/newDiary.wxss
@@ -15,14 +15,15 @@ page {
   width: 100rpx;
 }
 .bottom {
-  height: 28px;
-  line-height: 28px;
-  width: 48px;
-  position: absolute;
-  bottom: 30rpx;
-  right: 30rpx;
-  text-align: center;
-  background-color: #d9e895;  
-  color: #fff;
-  border-radius: 4px;
+  padding: 0 8px;
+    width: auto;
+    height: 30px;
+    line-height: 30px;
+    position: absolute;
+    bottom: 30rpx;
+    right: 30rpx;
+    text-align: center;
+    background-color: #90ae0a;  
+    color: #fff;
+    border-radius: 5px;
 }
