--- a/miniprogram/pages/viewDiary/viewDiary.wxml
+++ b/miniprogram/pages/viewDiary/viewDiary.wxml
@@ -11,8 +11,8 @@
         </view>
     </view>
     <!-- 正文 -->
-    <view class="cu-form-group textarea margin-top" >
-        <text style="height: 570rpx;font-size: 30rpx;">
+    <view class="cu-form-group textarea" >
+        <text style="height: 600rpx;font-size: 30rpx;">
             {{diary.content}}
         </text>
     </view>
