--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -61,6 +61,7 @@
 			style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;min-height: 0;opacity: 0;padding: 0 !important;"
 		>
 			<picker bindchange="PickerChange" value="{{index}}" range="{{list}}"
+			bindtap="check"
 			style="width: 100%;height: 100%;padding: 0;overflow: hidden;"
 			>
 				<view class="picker">
