--- a/miniprogram/pages/viewDiary/viewDiary.wxss
+++ b/miniprogram/pages/viewDiary/viewDiary.wxss
@@ -1,24 +1,27 @@
-
-  page {
-    background-color: white;
-    font-size: 30rpx;
-  }
-  .img {
-    float: left;
-    width: 50rpx;
-    height: 50rpx;
-  }
-  .photo_img {
-    margin-left: 34rpx;
-    margin-top: 30rpx;
-    height: 100rpx;
-    width: 100rpx;
-  }
-  .bottom {
-    height: 100rpx;
-    width: 100rpx;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-  }
-  
+page {
+  background-color: white;
+  font-size: 30rpx;
+}
+.img {
+  float: left;
+  width: 50rpx;
+  height: 50rpx;
+}
+.photo_img {
+  margin-left: 34rpx;
+  margin-top: 30rpx;
+  height: 100rpx;
+  width: 100rpx;
+}
+.bottom {
+  height: 28px;
+  line-height: 28px;
+  width: 48px;
+  position: absolute;
+  bottom: 30rpx;
+  right: 30rpx;
+  text-align: center;
+  background-color: #d9e895;  
+  color: #fff;
+  border-radius: 4px;
+}
