--- a/miniprogram/pages/diaryList/diaryList.wxss
+++ b/miniprogram/pages/diaryList/diaryList.wxss
@@ -146,7 +146,7 @@
     pointer-events: all;
   }
   .DrawerWindow .cu-list{
-    margin:70rpx 40rpx;
+    margin: 20px 20px
   }
   .DrawerClose {
     position: absolute;
