--- a/miniprogram/pages/loader/loader.wxss
+++ b/miniprogram/pages/loader/loader.wxss
@@ -28,3 +28,103 @@ page{
         box-shadow: -3em 2em 0 .5em #4ea980, 0 2em 0 0 #4ea980, 3em 2em 0 -.5em #4ea980;
      }
   }
+.note{
+   font-size: 20px;
+}
+view{
+   text-align: center;
+   margin-top: 10px;
+}
+.note1{
+   background: linear-gradient(to right, rgb(136, 203, 2),rgb(100, 136, 15), rgb(203, 163, 3));
+   -webkit-background-clip: text;
+  color: transparent;
+  text-align: center;
+}
+.note2{
+   background: linear-gradient(to right,rgb(255, 204, 0) ,rgb(129, 172, 29), rgb(159, 182, 53));
+   -webkit-background-clip: text;
+  color: transparent;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.animate__animated {
+
+   -webkit-animation-duration: 1s;
+ 
+   animation-duration: 1s;
+ 
+   -webkit-animation-fill-mode: both;
+ 
+   animation-fill-mode: both;
+ 
+ }
+
+
+.animate__animated.animate__repeat-1 {
+
+   -webkit-animation-iteration-count: 1;
+ 
+   animation-iteration-count: 1;
+ 
+ }
+ @-webkit-keyframes rollIn {
+
+   from {
+ 
+     opacity: 0;
+ 
+     -webkit-transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+ 
+     transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+ 
+   }
+ 
+ 
+ 
+   to {
+ 
+     opacity: 1;
+ 
+     -webkit-transform: translate3d(0, 0, 0);
+ 
+     transform: translate3d(0, 0, 0);
+ 
+   }
+ 
+ }
+ 
+ @keyframes rollIn {
+ 
+   from {
+ 
+     opacity: 0;
+ 
+     -webkit-transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+ 
+     transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+ 
+   }
+ 
+ 
+ 
+   to {
+ 
+     opacity: 1;
+ 
+     -webkit-transform: translate3d(0, 0, 0);
+ 
+     transform: translate3d(0, 0, 0);
+ 
+   }
+ 
+ }
+ 
+ .animate__rollIn {
+ 
+   -webkit-animation-name: rollIn;
+ 
+   animation-name: rollIn;
+ 
+ }
